# try-rust-sqlx

./: Cargo.toml  README.md  docker-compose.yml
docker/mysql/: Dockerfile
docker/rust/: Dockerfile
src/: init_db.rs  lib.rs
