[package]
name = "try-rust-sqlx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.60"
csv = "1.1.6"
futures = "0.3.21"
serde = "1.0.143"
sqlx = {version = "0.6.1", features = ["runtime-tokio-native-tls", "mysql", "chrono", "json"]}
tokio = {version="1.20.1", features = ["full"]}
